@@ -178,6 +178,7 @@ production.
 * BREAKING CHANGE: '??_badcontinue' error code was changed to '??badcontinue'
   for all query modules.
 * ApiQueryBase adds 'badcontinue' error code if module has 'continue' parameter.
+* (bug 32151) ApiWatch now supports list of pages (titles/pageids). Title parameter is now deprecated.
 
 === Languages updated in 1.21 ===
 
